--- a/src/radiation/hw4_elevation_remotesensing.ipynb
+++ b/src/radiation/hw4_elevation_remotesensing.ipynb
@@ -18,6 +18,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "d6da1c35-f1bd-4ecc-a5bf-9f2ed1b9ee0d",
+   "metadata": {},
+   "source": [
+    "# Github: https://github.com/MiriCaradonna/planetary_remote_sensing"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "11ee26e9-b4d4-4b7d-a7d9-486320cc84b9",
    "metadata": {},
    "source": [
@@ -413,11 +421,11 @@
    "id": "f2e0f74a-4e1e-410b-83db-ac7107e38451",
    "metadata": {},
    "source": [
-    "$\\textbf{Product \\ ID:}$ \"MDIS_HIW_256PPD_H09NE2\" \\\n",
-    "$\\textbf{Acquisition \\ date}$: 2016-12-31T06:18:00.044 \\\n",
-    "$\\textbf{Observation \\ geometry \\ (including \\ incidence \\ angle):}$  \\\n",
-    "$\\textbf{Spatial \\ resolution \\ (m/pixel)}$: 166.310788 \\\n",
-    "$\\textbf{Approximate \\ location \\ on \\ Mercury:}$ latitude: 0 - 22.5 degrees, longitude: 108 - 144 degrees"
+    "ProductID: \"MDIS_HIW_256PPD_H09NE2\" \\\n",
+    "Acquisition date : 2016-12-31T06:18:00.044 \\\n",
+    "Observation geometry (including incidence angle:  \\\n",
+    "Spatial resolution (m/pixel): 166.310788 \\\n",
+    "Approximate location on Mercury: latitude: 0 - 22.5 degrees, longitude: 108 - 144 degrees"
    ]
   },
   {
